updated mdms of contract from v1 to v2