@@ -16,6 +16,7 @@ import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -51,7 +52,9 @@ public class EstimateServiceUtil {
         StringBuilder url = getSearchURLWithParams(tenantId, estimateIds);
         RequestInfoWrapper requestInfoWrapper = RequestInfoWrapper.builder().requestInfo(requestInfo).build();
         List<Estimate> fetchEstimates = fetchResult(url, requestInfoWrapper);
-        return fetchEstimates.stream().filter(e -> Status.ACTIVE.equals(e.getStatus())).collect(Collectors.toList());
+        return fetchEstimates.stream()
+                .filter(e -> Objects.equals(e.getStatus().toString(), Status.ACTIVE.toString()))
+                .toList();
     }
 
     public List<Estimate> fetchResult(StringBuilder uri, Object request) {
